Kicad fails to render 3D PCB models.
System information
System:
Host: Aaron-Arch2 Kernel: 5.6.13-arch1-1 x86_64 bits: 64 compiler: gcc
v: 10.1.0 Desktop: KDE Plasma 5.18.5 tk: Qt 5.14.2 wm: kwin_x11 dm: LightDM
Distro: Arch Linux
CPU:
Topology: 8-Core model: AMD Ryzen 7 1700 bits: 64 type: MT MCP arch: Zen
rev: 1 L2 cache: 4096 KiB
flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
bogomips: 124621
Speed: 2602 MHz min/max: 1550/3900 MHz Core speeds (MHz): 1: 1791 2: 1831
3: 3118 4: 3117 5: 1554 6: 1557 7: 1557 8: 1555 9: 3129 10: 3192 11: 3350
12: 3141 13: 1884 14: 1756 15: 1555 16: 1552
Graphics:
Device-1: AMD Ellesmere [Radeon RX 470/480/570/570X/580/580X/590]
vendor: XFX Pine driver: amdgpu v: kernel bus ID: 09:00.0 chip ID: 1002:67df
Display: x11 server: X.Org 1.20.8 compositor: kwin_x11 driver: amdgpu,ati
unloaded: fbdev,modesetting,vesa resolution: 1: 1920x1080~60Hz
2: 1920x1080~60Hz s-dpi: 96
OpenGL: renderer: Radeon RX 580 Series (POLARIS10 DRM 3.36.0 5.6.13-arch1-1
LLVM 10.0.0)
v: 4.6 Mesa 20.0.7 direct render: Yes
Describe the issue
3D viewer in Kicad should display the 3D model of the PCB. It currently displays no PCB on mesa-git.
Regression
It worked in Mesa 20.0.7.
Any extra information would be greatly appreciated
To trigger the issue, import attached project into Kicad. (NOTE: You probably will need all optional kicad packages, including 3D models. Make sure to install all packages, should be roughly 5GB of files.) then on the side, double click "Bugged.kicad_pcb" to open it in PCBNew. Then on the top menu bar, select View->3D Viewer to see the 3D model generated of this PCB. There should be a viewable 3D model displayed inside the 3D Viewer.